tests/security/taintedInputDirectly/output.txt
ERROR: TaintedData - input.hack:4:22 - Detected tainted SQL